# logs-manager

./: .env.example  Dockerfile  docker-compose.prod.yaml  main.py  pyproject.toml
